--- a/archivos-yaml/deployment.yaml
+++ b/archivos-yaml/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: k8s-demo-app
         image: k8s-demo-image:latest  # Nombre de la imagen creada
+        imagePullPolicy: Never  # No se necesita descargar la imagen
         ports:
         - containerPort: 8080  # Puerto que expone tu aplicación
