--- a/k8s-demo/service.yaml
+++ b/k8s-demo/service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-demo-app-service
+  name: springboot-service
 spec:
   type: NodePort
   selector:
-    app: k8s-demo-app
+    app: springboot-app
   ports:
     - protocol: TCP
       port: 80      # Puerto en el que el servicio escucha
       targetPort: 8080  # Puerto del contenedor
-      nodePort: 30001  # Puerto en el que el servicio escucha en el nodo
