--- a/archivos-yaml/service.yaml
+++ b/archivos-yaml/service.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: k8s-demo-app-service
+  namespace: default
 spec:
   type: NodePort
   selector:
     app: k8s-demo-app
   ports:
     - protocol: TCP
-      port: 80      # Puerto en el que el servicio escucha
+      port: 31000     # Puerto en el que el servicio escucha
       targetPort: 8080  # Puerto del contenedor
-      nodePort: 30001  # Puerto en el que el servicio escucha en el nodo
+      nodePort: 32000  # Puerto en el que el servicio escucha en el nodo
